# floorplan-conversion

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/source/: conf.py
docs/source/custom/pre-modules/: introduction.md
floorplan_conversion/: cli.py  train.py
